bpy.ops.transform.rotate() ignores orient_type #80704

Closed
opened 2020-09-11 17:06:18 +02:00 by Karja Krähwald · 6 comments

System Information
Operating system: Windows-7-6.1.7601-SP1 64 Bits
Graphics card: GeForce GTX 980/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 446.14

Blender Version
Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-09-11 09:14, hash: 1b6dd42803
Worked: 2.83

Short description of error
Written like this in a script:

  bpy.ops.transform.rotate(value=math.radians(90), orient_axis="X", orient_type='LOCAL')

This worked in 2.83, but with 2.90 it seems the operator always falls back to 'GLOBAL'.

I have found this
https://developer.blender.org/rBSc57e4418bb85aec8bd3615fd775b990badb43d30
but not sure if its relevant.

Exact steps for others to reproduce the error
Ops Rotate Bug.blend
This is a file with a short script to execute the operator.
It works just fine in 2.83 with the expected 'LOCAL' or 'NORMAL' results.

**System Information** Operating system: Windows-7-6.1.7601-SP1 64 Bits Graphics card: GeForce GTX 980/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 446.14 **Blender Version** Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-09-11 09:14, hash: `1b6dd42803` Worked: 2.83 **Short description of error** Written like this in a script: ``` bpy.ops.transform.rotate(value=math.radians(90), orient_axis="X", orient_type='LOCAL') ``` This worked in 2.83, but with 2.90 it seems the operator always falls back to 'GLOBAL'. I have found this https://developer.blender.org/rBSc57e4418bb85aec8bd3615fd775b990badb43d30 but not sure if its relevant. **Exact steps for others to reproduce the error** [Ops Rotate Bug.blend](https://archive.blender.org/developer/F8865919/Ops_Rotate_Bug.blend) This is a file with a short script to execute the operator. It works just fine in 2.83 with the expected 'LOCAL' or 'NORMAL' results.

Added subscriber: @karja

Added subscriber: @karja

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

The problem is that this operator is being called in a 2D context (without a 3D view).
So it is to be expected that it does not have a defined orientation (if the orientation was VIEW, which 3DView should the operator choose?).

But since it worked before, I will make it less restrictive and allow orientations like "LOCAL" and "NORMAL" to be calculated even in a 2D context.

The problem is that this operator is being called in a 2D context (without a 3D view). So it is to be expected that it does not have a defined orientation (if the orientation was VIEW, which 3DView should the operator choose?). But since it worked before, I will make it less restrictive and allow orientations like "LOCAL" and "NORMAL" to be calculated even in a 2D context.

This issue was referenced by f7829787da

This issue was referenced by f7829787da5c64b3fa715a042c2a45ecd4314676

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Germano Cavalcante self-assigned this 2020-09-14 20:56:26 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#80704
No description provided.