Fix T80704: bpy.ops.transform.rotate() ignores orient_type

Remove the condition preventing orientation from being obtained out of
the 3d View context.

Also pass the `ob` and `obedit` arguments obtained from the caller.