source/blender/editors/include/ED_transform.h
@@ -130,6 +130,8 @@ bool BIF_createTransformOrientation(struct bContext *C,
 void BIF_selectTransformOrientation(struct bContext *C, struct TransformOrientation *target);
 
 void ED_getTransformOrientationMatrix(const struct bContext *C,
+                                      struct Object *ob,
+                                      struct Object *obedit,
                                       const short around,
                                       float r_orientation_mat[3][3]);
 
